# 2026AT_DogUpper

./: .gitignore  README.md
src/launch_pack/: CMakeLists.txt
src/launch_pack/launch/: run_leg_calc_and_rviz2.py  run_leg_calc_driver_rviz2.py  run_leg_calc_measure.py
src/launch_pack/rviz/: base_calc_and_show.rviz
src/launch_pack/src/: CSV.csv
src/leg_calc/: CMakeLists.txt  package.xml
src/leg_calc/include/leg_calc/: leg.h  leg_driver.h  mynode.h  param.h  step.h  vmc.hpp
src/leg_calc/src/: leg.cpp  leg_driver.cpp  main.cpp  mynode.cpp  param.cpp  step.cpp  vmc.cpp
src/leg_driver/: CMakeLists.txt  package.xml
src/leg_driver/include/leg_driver/: cdc_trans.hpp  data_pack.h  package_comm.hpp  serialnode.hpp  usb_cdc.hpp
src/leg_driver/src/: cdc_trans.cpp  package_comm.cpp  serialnode.cpp  usb_cdc.cpp
src/leg_measure/: CMakeLists.txt  package.xml
src/leg_measure/include/leg_measure/: measure_node.hpp
src/leg_measure/src/: main.cpp  measure_node.cpp
src/leg_module/: CMakeLists.txt  package.xml
src/leg_module/leg_urdf/: leg.urdf
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: Leg.msg  LegTarget.msg
